...
        button.titleLabel?.font = FontUtil.loadFont(font: BaseFont.bold, size: DimenConsts.regularFontSize)
        
        // This will remove the padding from the button.
        // If all values are set to 0, the padding will be be set to it's default,
        // so the values have to be set the nearly 0 (0.01) for this to work.
        button.contentEdgeInsets = UIEdgeInsets(top: 0, left: 0.01, bottom: 0.01, right: 0)
        button.accessibilityIdentifier = "loginActionBtnId"
        return button
    }()
    
    lazy var emailTxt: LoginTextField = {
        let textField = LoginTextField()
        viewModel?.email.bidirectionalBind(to: textField.reactive.text)
        textField.font = FontUtil.loadFont(font: .regular, size: DimenConsts.largeFontSize)
        textField.setPlaceholder(placeholder: StringConsts.emailTxtPlaceholder)
        textField.accessibilityIdentifier = "emailTxtId"
        textField.delegate = self
        textField.returnKeyType = .done
        return textField
    }()
    
    lazy var emailValidationLabel: UILabel = {
        let label = UILabel()
        viewModel?.emailValidation.bind(to: label.reactive.alpha)
        label.text = StringConsts.emailValidation
        label.textColor = .appAccent
        label.font = FontUtil.loadFont(font: .bold, size: DimenConsts.smallFontSize)
        label.accessibilityIdentifier = "emailValidationLabelId"
        label.alpha = 0
        return label
    }()
    
    lazy var passwordTxt: LoginTextField = {
        let textField = LoginTextField()
        viewModel?.password.bidirectionalBind(to: textField.reactive.text)
        textField.font = FontUtil.loadFont(font: .regular, size: DimenConsts.largeFontSize)
        textField.setPlaceholder(placeholder: StringConsts.passwordTxtPlaceholder)
        textField.accessibilityIdentifier = "passwordTxtId"
        textField.returnKeyType = .done
        textField.isSecureTextEntry = true
        textField.delegate = self
        return textField
    }()
    
    lazy var passwordValidationLabel: UILabel = {
        let label = UILabel()
        viewModel?.passwordValidation.bind(to: label.reactive.alpha)
        label.text = StringConsts.passwordValidation
        label.textColor = .appAccent
        label.font = FontUtil.loadFont(font: .bold, size: DimenConsts.smallFontSize)
        label.accessibilityIdentifier = "passwordValidationLabelId"
        label.alpha = 0
        return label
    }()
    
    lazy var passwordConfirmTxt: LoginTextField = {
        let textField = LoginTextField()
...
        textField.font = FontUtil.loadFont(font: .regular, size: DimenConsts.largeFontSize)
        textField.setPlaceholder(placeholder: StringConsts.pwConfirmTxtPlaceholder)
        textField.returnKeyType = .done
        textField.alpha = 0
        textField.isSecureTextEntry = true
        textField.delegate = self
        textField.accessibilityIdentifier = "confirmPwTxtId"
        return textField
    }()
    
    lazy var pwMatchValidationLabel: UILabel = {
        let label = UILabel()
        viewModel?.pwMatchValidation.bind(to: label.reactive.alpha)
...
        button.contentScaleFactor = 0.5
        button.setTitle(title: StringConsts.loginBtnText)
        button.textColor = .white
        button.width = loginBtnsWidth
        button.titleLabel?.font = FontUtil.loadFont(font: .medium, size: DimenConsts.largeFontSize)
        button.backgroundColor = .appPrimary
        button.accessibilityIdentifier = "loginBtnId"
        return button
    }()
    
    lazy var orLabel: UILabel = {
        let label = UILabel()
        label.contentScaleFactor = 0.5
...
